--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                             </div>
                             <div class="detail">
                                 <h4>call Me</h4>
-                                <p><i class="fas fa-call">+91 7096827042</i></p>
+				    <p><i class="fas fa-call"><a href="+917096827042"></i></a></p>
                             </div>
                             <div class="detail">
                                 <h4>Email Me</h4>
