--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
               data: [{
                 type: "column",
                 startAngle: 25,
-                toolTipContent: "<b>{label}</b><br>SPI: {y} <br> ",
+                toolTipContent: "<b>{label}</b><br>",
                 showInLegend: "true",
                 // legendText: "{label}",
                 indexLabelFontSize: 16,
                 
                 // indexLabel: "{label} - {y} SPI",
                 dataPoints: [
-                  { label: "Sem-1 (2017)<br> (8.17 SPI)", y:81.7 },
-                  {  label: "Sem-2 (2018) (8.93)",y: 89.3, },
-                  { label: "Sem-3 (2018) (8.55)", y: 85.5, },
-                  { label: "Sem-4 (2019) (8.58)",y: 85.8,  },
-                  {  label: "Sem-5 (2019) (8.60)",y: 86.0, },
-                  { label: "Sem-6 (2020) (9.61)", y: 96.1, }
+                  { label: "Sem-1 (2017) (8.17 SPI)", y:81.7 },
+                  {  label: "Sem-2 (2018) (8.93 SPI)",y: 89.3, },
+                  { label: "Sem-3 (2018) (8.55 SPI)", y: 85.5, },
+                  { label: "Sem-4 (2019) (8.58 SPI)",y: 85.8,  },
+                  {  label: "Sem-5 (2019) (8.60 SPI)",y: 86.0, },
+                  { label: "Sem-6 (2020) (9.61 SPI)", y: 96.1, }
                   // { y: 0.44, label: "Others"
                 ]
               }]
@@ -468,11 +468,11 @@
                             </div>
                             <div class="detail">
                                 <h4>call Me</h4>
-				    <a href="tel:+917096827042"></a>
+				    <p><a href="tel:+917096827042"></a></p>
                             </div>
                             <div class="detail">
                                 <h4>Email Me</h4>
-				    <a href ="mailto:umeshsolanki5513@gmail.com</a>
+				    <p><a href ="mailto:umeshsolanki5513@gmail.com></a></p>
                             </div> 
                         </div>
        		  
