--- a/index.html
+++ b/index.html
@@ -468,11 +468,13 @@
                             </div>
                             <div class="detail">
                                 <h4>call Me</h4>
-				    <p><a href="tel:+917096827042"></a></p>
+<!-- 				    <p><a href="tel:+917096827042"></a></p> -->
+				    <p>+91 7096827042</p>
                             </div>
                             <div class="detail">
                                 <h4>Email Me</h4>
-				    <p><a href ="mailto:umeshsolanki5513@gmail.com></a></p>
+<!-- 				    <p><a href ="mailto:umeshsolanki5513@gmail.com></a></p> -->
+				    <p>umeshsolanki5513@gmail.com</p>
                             </div> 
                         </div>
        		  
