--- a/index.html
+++ b/index.html
@@ -468,8 +468,8 @@
                             </div>
                             <div class="detail">
                                 <h4>call Me</h4>
-<!-- 				    <p><a href="tel:+917096827042"></a></p> -->
-				    <a href="tel:+917096827042"></a>
+				    <p><a href="tel:+917096827042"></a></p>
+<!-- 				    <a href="tel:+917096827042"></a> -->
                             </div>
                             <div class="detail">
                                 <h4>Email Me</h4>
