--- a/index.html
+++ b/index.html
@@ -469,12 +469,12 @@
                             <div class="detail">
                                 <h4>call Me</h4>
 <!-- 				    <p><a href="tel:+917096827042"></a></p> -->
-				    <a href="tel:+917096827042"></a>
+				    <a href="tel:+917096827042">+917096827042</a>
                             </div>
                             <div class="detail">
                                 <h4>Email Me</h4>
-<!-- 				    <p><a href ="mailto:umeshsolanki5513@gmail.com></a></p> -->
-				    <p>umeshsolanki5513@gmail.com</p>
+				    <a href ="mailto:umeshsolanki5513@gmail.com">umeshsolanki5513@gmail.com</a>
+<!-- 				    <p>umeshsolanki5513@gmail.com</p> -->
                             </div> 
                    </div>
        		  
