--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                             </div>
                             <div class="detail">
                                 <h4>Email Me</h4>
-				    <p><a href ="mailto:umeshsolanki5513@gmail.com">umeshsolanki5513@gmail.com</a></p>
+				    <p color="white"><a href ="mailto:umeshsolanki5513@gmail.com">umeshsolanki5513@gmail.com</a></p>
 <!-- 				    <p>umeshsolanki5513@gmail.com</p> -->
                             </div> 
                    </div>
