--- a/index.html
+++ b/index.html
@@ -469,11 +469,11 @@
                             <div class="detail">
                                 <h4>call Me</h4>
 <!-- 				    <p><a href="tel:+917096827042"></a></p> -->
-				    <p><a href="tel:+917096827042">+917096827042</a></p>
+				    <p style="{color:white}"><a href="tel:+917096827042">+917096827042</a></p>
                             </div>
                             <div class="detail">
                                 <h4>Email Me</h4>
-				    <p color="white"><a href ="mailto:umeshsolanki5513@gmail.com">umeshsolanki5513@gmail.com</a></p>
+				    <p style="{color:white}"><a href ="mailto:umeshsolanki5513@gmail.com">umeshsolanki5513@gmail.com</a></p>
 <!-- 				    <p>umeshsolanki5513@gmail.com</p> -->
                             </div> 
                    </div>
