--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 	  <div class="row">
 						<div class="col-lg-12 about-us">
 							<div class="row">
-							<div class="col-md-6"> <img class="img-responsive" src="img/about1.png" align=""> </div><!-- /.col-md-6 -->
+							<div class="col-md-6"> <img class="img-responsive" src="img/umesh.jpg" align=""> </div><!-- /.col-md-6 -->
 								<div class="col-md-6">
 									<h3>I'm an Enthusiastic Learner and Programmer</h3>
 									<p>
