--- a/index.html
+++ b/index.html
@@ -174,11 +174,11 @@
                     programmer with a reputed firm driven bytechnology.
 									</p>
 									<ul class="about-us-list">
-                    <li class="points">I'm good in programming and problem solving and also learning Data Science, Cyber Security, Node js  </li>
-                    <li class="points">I have done my 12th science from B.M commerce High School with 70% </li>
-                    <li class="points">I have done some small projects that are already mentions. </li>
+                    <li class="points">I'm good in programming and problem solving and also learning Data Science, Cyber Security, Node js and React js  </li>
+                    <li class="points">I'm currently pursuing my BE degree in Information Technology with current semester-6 SPI 9.61 </li>
+                    <li class="points">I have done some small projects that are already mentions in project section. </li>
                     <li class="points">languages I know => python, C/C++, Basic of  PHP and javascript </li>
-                    <li class="points">Platform I know => Django, React, Node js, opencv, tensorflow</li>
+                    <li class="points">Platform I know => Django, React js, Node js, opencv,</li>
 									</ul><!-- /.about-us-list -->
 								 
 								</div><!-- /.col-md-6 -->
