--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="msvalidate.01" content="1E5F6D412EDBA39797725A206E018E07" />
 <meta name="viewport" content="width=device-width, maximum-scale=1">
 <title>Umesh Solanki Portfolio</title>
 <link rel="icon" href="favicon.png" type="image/png">
