--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 <meta charset="utf-8">
 <meta name="msvalidate.01" content="1E5F6D412EDBA39797725A206E018E07" />
 <meta name="viewport" content="width=device-width, maximum-scale=1.0">
-<title>Umesh Solanki Portfolio</title>
+<title>umesh solanki Portfolio</title>
+<meta name="description" content= "I'm umesh solanki a software engineer, I have knowledge of React js , node js , python, digital marketing (SEO,SEM,..), website vulnerabilities testing" />
+<meata name="keywords" content="umesh portfolio, umesh solanki portfolio, umesh solanki, portfolio, software engineer,solanki portfolio,solanki umesh portfolio,umesh information">
+<meta name="robots" content= "index, follow">
 <link rel="icon" href="favicon.png" type="image/png">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
