--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <meta name="msvalidate.01" content="1E5F6D412EDBA39797725A206E018E07" />
 <meta name="viewport" content="width=device-width, maximum-scale=1.0">
 <title>umesh solanki Portfolio</title>
+<meta http-equiv='content-language' content='en-in'>
 <meta name="description" content= "I'm umesh solanki a software engineer, I have knowledge of React js , node js , python, digital marketing (SEO,SEM,..), website vulnerabilities testing" />
 <meata name="keywords" content="umesh portfolio, umesh solanki portfolio, umesh solanki, portfolio, software engineer,solanki portfolio,solanki umesh portfolio,umesh information">
 <meta name="robots" content= "index, follow">
@@ -133,6 +134,9 @@
 }
       </script>
 
+<header>
+	<h1></h1>
+</header>
 <!--Hero_Section-->
 <section id="hero_section" class="top_cont_outer">
   <div class="hero_wrapper">
