--- a/home.html
+++ b/home.html
@@ -17,6 +17,7 @@
 
 <html>
 <head>
+Access-Control-Allow-Origin: *
 <meta charset="utf-8">
 <meta name="msvalidate.01" content="1E5F6D412EDBA39797725A206E018E07" />
 <meta name="viewport" content="width=device-width, maximum-scale=1.0">
