--- a/home.html
+++ b/home.html
@@ -18,6 +18,7 @@
 
 <html>
 <head>
+	<script type="text/javascript" src="js/jquery.min.js"></script>
 <meta charset="utf-8">
 <meta name="msvalidate.01" content="1E5F6D412EDBA39797725A206E018E07" />
 <meta name="viewport" content="width=device-width, maximum-scale=1.0">
