--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <!--[if lt IE 9]>
 <link rel="stylesheet" href="stylesheets/ie.css">
 <script type="text/javascript" src="js/jquery.min.js"></script>
-<![endif]--><script type="text/javascript" src="javascripts/modernizr.foundation.js"></script>
+<![endif]--><script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/foundation/3.2.5/javascripts/modernizr.foundation.js"></script>
 <!-- IE Fix for HTML5 Tags -->
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
