--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 <![endif]--><script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/foundation/3.2.5/javascripts/modernizr.foundation.js"></script>
 <!-- IE Fix for HTML5 Tags -->
 <!--[if lt IE 9]>
-<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 
 <html>
