--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
 <meta http-equiv='content-language' content='en-in'>
 <meta name="description" content= "I'm umesh solanki a software engineer, I have knowledge of React js , node js , python, digital marketing (SEO,SEM,..), website vulnerabilities testing" />
 <meata name="keywords" content="umesh portfolio, umesh solanki portfolio, umesh solanki, portfolio, software engineer,solanki portfolio,solanki umesh portfolio,umesh information">
-<meta name="robots" content= "index, follow">
+<meta name="robots" content= "index,through">
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <link rel="icon" href="favicon.png" type="image/png">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
