--- a/home.html
+++ b/home.html
@@ -182,7 +182,7 @@
         </div>
 	    <div id="main-nav" class="collapse navbar-collapse navStyle">
         <ul className="nav navbar-nav" id="mainNav">
-          <li className="active"><a href="./index.html" className="scroll-link">Home</a></li>
+          <li className="active"><a href="./home.html" className="scroll-link">Home</a></li>
           <li><a href="#aboutUs" className="scroll-link">About Me</a></li>
           <li><a href="#service" className="scroll-link">Skills</a></li>
           <li><a href="#Portfolio" className="scroll-link">Projects</a></li>
