--- a/home.html
+++ b/home.html
@@ -100,6 +100,11 @@
       }
       </script> -->
       <script>
+        $('.navbar-collapse ul li a').click(function(){
+            $(".navbar-collapse").collapse('hide');
+        });
+      </script>
+      <script>
         window.onload = function() {
 
             var chart = new CanvasJS.Chart("chartContainer", {
@@ -150,7 +155,7 @@
               <h2>I AM UMESH<br> <strong>SOFTWARE ENGINEER</strong></h2>
               <p>
                 I am Umesh Solanki, from planet with a passion of Cyber Security , python Programming,  and C/C++ Programming. <br/>
-                I'm still learning new things that help me to archive my goals in pyhton, Data Science, cyber security . <br/>
+                I'm still learning new things that help me to archive my goals in python, Data Science, cyber security . <br/>
                 Enthusiastic about life, technologies and innovation . 
               </p>
               
