--- a/home.html
+++ b/home.html
@@ -540,7 +540,7 @@
         <div class="col-lg-8 wow fadeInLeft delay-06s">
          	  <!--NOTE: Update your email Id in "contact_me.php" file in order to receive emails from your contact form-->
         
-		<form name="sentMessage" id="contactForm"  novalidate> 
+		<form method="post" action="contact/contact_me.php"name="sentMessage" id="contactForm"  novalidate> 
 		 <div class="control-group">
                     <div class="controls">
 			<input type="text" class="form-control" 
