--- a/home.html
+++ b/home.html
@@ -492,7 +492,7 @@
   <div class="container">
     <h2>Resume</h2>
     <!-- <h6>Lorem ipsum dolor sit amet, consectetur adipiscing.</h6> -->
-	  <iframe src="./Resume/Resume.pdf" width="100%" height="900px" alt="Umesh Resume"></iframe>
+	  <iframe src="./Resume/Umesh_Resume.pdf" width="100%" height="900px" alt="Umesh Resume"></iframe>
 		
   <!-- row --> 
 	</div>
