--- a/home.html
+++ b/home.html
@@ -100,7 +100,8 @@
                   { label: "Sem-4 (2019) SPI:8.58",y: 85.8,  },
                   {  label: "Sem-5 (2019) SPI:8.60",y: 86.0, },
                   { label: "Sem-6 (2020) SPI:9.61", y: 96.1, },
-                  { label: "Sem-7 (2021) SPI:8.96", y: 89.6, }
+                  { label: "Sem-7 (2021) SPI:8.96", y: 89.6, },
+                  { label: "Sem-8 (2021) SPI:9.0", y: 90.0, }
                   // { y: 0.44, label: "Others"
                 ]
               }]
